# ua-inn-2025

./: .env.template  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  cloud-functions.sh  docker-compose.yml  package-lock.json  pyproject.toml  start.sh
.github/actions/docker-image/: action.yml
.github/actions/gar/: action.yml
.github/actions/terraform/: action.yml
.github/workflows/: ci.yml
data/: data_furniture.json  data_groceries.json
frontend/: .env.template  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/functions/: index.js  package-lock.json  package.json
frontend/src/: store.ts  userSlice.ts
frontend/src/hooks/: useUser.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: api.ts  (+1 more)
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: helpers.ts  index.ts  next-auth.d.ts  order.types.ts  product.types.ts  request.types.ts  status.enum.ts  suggestion.types.ts
src/backend/: app.py  constants.py  logger.py  startup.py
src/backend/auth/: constants.py  database.py  models.py  router.py
src/backend/data_creation/: data_creation.py
src/backend/database/: database.py
src/backend/order/: router.py
src/backend/products/: router.py
src/backend/request/: request.py  router.py
src/backend/suggestion/: router.py  suggestion.py
terraform/: artifact-registry.tf  cloud-functions.tf  cloud-run.tf  firebase.tf  main.tf  outputs.tf  provider.tf  secrets.tf  service-accounts.tf  storage.tf  terraform.tfvars  variables.tf
(+51 files in other folders)
